--- a/Notebooks/v3_cleaning.Rmd
+++ b/Notebooks/v3_cleaning.Rmd
@@ -4,10 +4,9 @@ output: html_notebook
 
 ---
 ```{r}
-library(arsenal)
+# Ensure packages are installed before loading
 library(here)
 library(dplyr)
-library(ggplot2)
 
 # Set working directory to project root with 'here' package:
 knitr::opts_knit$set(root.dir = here::here())
