perf: :art: Update.gitignore to not include html files

--- a/Notebooks/v3_cleaning.Rmd
+++ b/Notebooks/v3_cleaning.Rmd
@@ -7,6 +7,7 @@ output: html_notebook
 # Ensure packages are installed before loading
 library(here)
 library(dplyr)
+library(knitr)
 
 # Set working directory to project root with 'here' package:
 knitr::opts_knit$set(root.dir = here::here())
