--- a/Notebooks/v3_cleaning.Rmd
+++ b/Notebooks/v3_cleaning.Rmd
@@ -7,8 +7,13 @@ output: html_notebook
 # Create a character vector of the package names
 packages <- c("here", "dplyr", "knitr")
 
-# Install the packages
-install.packages(packages)
+# Install the packages (if not already installed)
+installed_packages <- rownames(installed.packages())
+for (pkg in packages) {
+  if (!pkg %in% installed_packages) {
+    install.packages(pkg)
+  }
+}
 
 # Load the packages
 lapply(packages, library, character.only = TRUE)
