--- a/Notebooks/v3_11s_analysis.Rmd
+++ b/Notebooks/v3_11s_analysis.Rmd
@@ -31,7 +31,7 @@ lapply(packages, library, character.only = TRUE)
 ```{r}
 attendance_11s_raw <- read.csv(here("Datasets", "1_1attendance.csv"))
 attendance_11s_raw # rows: 52,951, UPNS:
-n_distinct(attendance_11s_raw$external_identifier) #2708
+n_distinct(attendance_11s_raw$external_identifier) # 2708
 ```
 
 
@@ -39,15 +39,15 @@ n_distinct(attendance_11s_raw$external_identifier) #2708
 # Filter for status 'attended'
 attendance_11s <- attendance_11s_raw %>%
   filter(status_id == 2) %>%
-# Select and rename columns
+  # Select and rename columns
   select(activity_date_time, external_identifier) %>%
   rename(upn = external_identifier)
 
-nrow(attendance_11s) #43225
-n_distinct(attendance_11s$upn) #2698
+nrow(attendance_11s) # 43225
+n_distinct(attendance_11s$upn) # 2698
 ```
 ```{r}
-# Check for and remove rows with missing values 
+# Check for and remove rows with missing values
 sum(is.na(attendance_11s$activity_date_time))
 sum(is.na(attendance_11s$upn))
 ```
@@ -56,14 +56,14 @@ sum(is.na(attendance_11s$upn))
 attendance_11s$date_only <- sub(" .*", "", attendance_11s$activity_date_time)
 attendance_11s$date_only <- as.Date(attendance_11s$date_only, format = "%d/%m/%Y")
 
-# Drop the old column and rename 
+# Drop the old column and rename
 attendance_11s <- attendance_11s %>%
   select(-activity_date_time) %>%
   rename(date = date_only)
 ```
 
 ```{r}
-# Get start date from demographics or follow-ups 
+# Get start date from demographics or follow-ups
 # Comparing attendance/demographics dataset UPNs to attendance dataset to see which one has more matches (to retrieve start date)
 
 upns_11s <- unique(attendance_11s$upn)
@@ -72,7 +72,7 @@ upns_demographics <- unique(v3_dem_r4w$upn)
 ```
 
 ```{r}
-# Common UPNs between 1:1 attendance and followups 
+# Common UPNs between 1:1 attendance and followups
 common_upns_11s_followups <- intersect(upns_11s, upns_followups)
 length(common_upns_11s_followups)
 
@@ -100,7 +100,7 @@ prog_year <- mapply(v3_simplified_find_year, joined_11s$date, joined_11s$case_st
 # Append prog year as new col
 joined_11s$prog_year <- unlist(prog_year)
 
-# Range of programme years 
+# Range of programme years
 range(joined_11s$prog_year)
 joined_11s
 ```
@@ -109,15 +109,15 @@ joined_11s
 # Get unique dates
 unique_sessions_11s <- joined_11s %>%
   group_by(upn, prog_year) %>%
-  summarise(unique_dates_count = n_distinct(date), .groups = 'drop')
+  summarise(unique_dates_count = n_distinct(date), .groups = "drop")
 unique_sessions_11s
 
-# Descriptives for 1:1s - all years 
+# Descriptives for 1:1s - all years
 counts_11s_stats <- unique_sessions_11s %>%
   group_by(prog_year) %>%
   summarise(
-    total_records = n(), 
-    unique_upns = n_distinct(upn), 
+    total_records = n(),
+    unique_upns = n_distinct(upn),
     min_count_11s = min(unique_dates_count),
     max_count_11s = max(unique_dates_count),
     sd_count_11s = sd(unique_dates_count),
@@ -131,10 +131,10 @@ print(counts_11s_stats)
 # Sessions per date
 daily_sessions <- joined_11s %>%
   group_by(upn, date) %>%
-  summarise(session_count = n(), .groups = 'drop')
+  summarise(session_count = n(), .groups = "drop")
 
 daily_sessions
-# UPNs with more than one entry per date 
+# UPNs with more than one entry per date
 multiple_entries_per_date <- daily_sessions %>%
   filter(session_count > 1)
 
@@ -147,24 +147,17 @@ pre_16_11s <- unique_sessions_11s %>%
   group_by(upn) %>%
   summarise(pre_16_total_11s = sum(unique_dates_count)) %>%
   mutate(proportion_11s = pre_16_total_11s / 24 * 100)
-
 ```
 
 ```{r}
-
 ggplot(pre_16_11s, aes(x = proportion_11s)) +
   geom_density(fill = "forestgreen", alpha = 0.5) +
   theme_minimal() +
   labs(title = "Density of 1:1 completion proportions", x = "Proportion met", y = "Density")
-
-
 ```
 ```{r}
-
 ggplot(pre_16_11s, aes(x = proportion_11s)) +
-  geom_histogram(binwidth = 30, fill = "skyblue") + 
+  geom_histogram(binwidth = 30, fill = "skyblue") +
   theme_minimal() +
   labs(title = "Distribution of 1:1 completion proportions", x = "Proportion met", y = "Frequency (count)")
-
-
 ```
