--- a/Notebooks/v3_unique_11s_analysis.Rmd
+++ b/Notebooks/v3_unique_11s_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "v3 coaching attendance analysis: counts of sessions"
+title: "v3 coaching attendance analysis"
 output: html_notebook
 ---
 
@@ -77,7 +77,6 @@ length(common_upns_11s_demographics)
 ```
 
 ```{r}
-# Joining to get start date and cohort
 joined_11s <- attendance_11s %>%
   left_join(v3_dem_r4w %>% select(upn, case_start, cohort), by = "upn")
 
@@ -109,14 +108,17 @@ joined_11s
 all_prog_years_11s <- joined_11s %>%
   group_by(upn, cohort, prog_year) %>%
   summarise(count_11s = n(), .groups = "drop")
-```
+
 # Join with follow-up status
 status_11s <- all_records_with_y12q1 %>%
   select(upn, followup_period, status) %>%
   inner_join(all_prog_years_11s, by = "upn")
-```{r}
+
+status_11s
+n_distinct(status_11s$upn)
+
 # Descriptives for 1:1s - all years
-counts_11s_stats <- all_prog_years_11s %>%
+counts_11s_stats <- status_11s %>%
   group_by(prog_year) %>%
   summarise(
     total_records = n(),
